# imgcrsh

./: .gitignore  Cargo.toml  SPEC.md  TODO.md
.claude/: settings.local.json
scratch/: compare.rs  compare_app2.rs  compare_icc.rs
scripts/: convert_all.sh
src/: color.rs  config.rs  lib.rs  main.rs  orientation.rs  pipeline.rs
src/formats/: avif.rs  gif.rs  jpeg.rs  jxl.rs  mod.rs  png.rs  webp.rs
tests/: jpeg_pipeline.rs
