[package]
name = "imgcrsh"
version = "0.1.0"
edition = "2024"
default-run = "imgcrsh"

[dependencies]
# The Core: High-performance color management (SIMD accelerated)
# Replaces lcms2 for web-standard transforms.
moxcms = "0.7"

# The Muscle: Best-in-class image resizing using SIMD (AVX2/NEON)
# Supports Lanczos3 and linear-light resampling.
fast_image_resize = { version = "5.4", features = ["rayon"] }

# The Swiss Army Knife: Format decoding and general pixel handling
# We disable default features to keep the binary lean and avoid bloat.
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "tiff",
    "gif",
    "avif"
] }

# The Optimizers: Industry-standard encoding libraries
# We use these directly for better control over quantization and metadata injection.
mozjpeg = "0.10"        # The gold standard for web JPEG compression
oxipng = "10.0"         # Multi-threaded PNG optimization
webp = "0.3"           # WebP conversion and encoding
imagequant = "4"       # RGBA quantization for lossy PNG (pngquant library)
ravif = "0.12"         # AVIF encoding via rav1e

# Metadata Parsing
kamadak-exif = "0.6"   # Lightweight, read-only EXIF parser for orientation & color space

# Infrastructure
anyhow = "1.0"         # Ergonomic error handling for the pipeline logic

[dev-dependencies]
dssim = "3.3"          # Perceptual image quality testing

[[bin]]
name = "compare"
path = "scratch/compare.rs"

[[bin]]
name = "compare_icc"
path = "scratch/compare_icc.rs"

[[bin]]
name = "compare_app2"
path = "scratch/compare_app2.rs"
